--- a/notebooks/RadiobiologiaRTMama.ipynb
+++ b/notebooks/RadiobiologiaRTMama.ipynb
@@ -51,8 +51,7 @@
     "\n",
     "Pinchar sobre el icono `Upload Files`\n",
     "\n",
-    "Cargar el archivo comprimido\n",
-    "\n",
+    "Subir el archivo comprimido `MamaDer001.zip`\n",
     "\n",
     "Importación de módulos y configuración de opciones"
    ]
@@ -64,18 +63,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import relevant modules and classes.\n",
-    "from pathlib import Path\n",
+    "from skrt import Dose, Patient\n",
+    "from skrt.core import get_data_by_filename\n",
     "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "from skrt import Dose, Patient, set_viewer_options\n",
-    "from skrt.core import get_data_by_filename\n",
-    "\n",
     "# Set scikit-rt viewer options.\n",
-    "options = set_viewer_options()\n",
+    "options = {}\n",
     "# Make display interactive (\"no_ui\": False) or non-interactive (\"no_ui\": True).\n",
     "options[\"no_ui\"] = False\n",
     "# Include the interface for interactive zooming.\n",
@@ -89,6 +85,24 @@
     "options[\"figsize\"] = (13, 6)\n",
     "# Overlay default image annotation (slice z-coordinate), in white, at default position (top left or image).\n",
     "options[\"annotate_slice\"] = {\"color\": \"white\", \"fontsize\": 24}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "336ba453-6a97-42fb-9dcc-df80e3c2ed97",
+   "metadata": {},
+   "source": [
+    "Descomprimir los datos de la paciente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b6825704-d727-4410-9805-7ed714ca691b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!bash ../shell_scripts/preparar_datos > /dev/null"
    ]
   },
   {
