--- a/notebooks/RadiobiologiaRTMama.ipynb
+++ b/notebooks/RadiobiologiaRTMama.ipynb
@@ -65,6 +65,7 @@
    "source": [
     "from skrt import Dose, Patient\n",
     "from skrt.core import get_data_by_filename\n",
+    "import gdown\n",
     "\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -92,7 +93,7 @@
    "id": "336ba453-6a97-42fb-9dcc-df80e3c2ed97",
    "metadata": {},
    "source": [
-    "Descomprimir los datos de la paciente"
+    "Descargar y descomprimir los datos de la paciente"
    ]
   },
   {
@@ -102,6 +103,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Descargar los datos compartidos de Google Drive\n",
+    "url = 'https://drive.google.com/file/d/1ICECuwHhMBoMwioQ96-UpkV43v0kNneI/view?usp=sharing'\n",
+    "output = '../data/MamaDer001.zip'\n",
+    "gdown.download(url, output, quiet=False, fuzzy=True)\n",
+    "\n",
+    "# Descomprimir el archivo zip\n",
     "!bash ../shell_scripts/preparar_datos > /dev/null"
    ]
   },
@@ -487,14 +494,6 @@
    "source": [
     "pulmonder_dvh.relative_volume.statistic('V20Gy')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93ca9674-594c-46ec-a391-d9749eb35dcf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
