--- a/notebooks/RadiobiologiaRTMama.ipynb
+++ b/notebooks/RadiobiologiaRTMama.ipynb
@@ -23,6 +23,8 @@
     "\n",
     "## Fundamentos\n",
     "\n",
+    "Los conceptos básicos sobre los que se trabajará en este cuaderno corresponden a un tratamiento de mama, una de las patalogías que con más frecuenca se trata en los Servicios de Radioterapia, pero son aplicables en general a cualquier otra patología. \n",
+    "\n",
     "En el tratamiento del cáncer de mama la radioterapia se emplea como tratamiento adyuvante a la cirugía. El tumor primario se extirpa y posteriormente se administra una dosis de radiación sobre el lecho tumoral y sobre el resto de la mama.\n",
     "\n",
     "Definiendo un volumen de tratamiento que comprenda el lecho tumoral más un margen para incluir la posible enfermedad microscópica, la experiencia clínica apunta a que se tiene una alta probabilidad de éxito en el tratamiento si la dosis que se administra a ese volumen es de 60 Gy en 30 fracciones. Sobre el volumen que cubre toda la mama la dosis administrada debe ser de 50 Gy en 25 fracciones.\n",
@@ -153,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11c569c0b9494287a29d09b36ba11899",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -167,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f80535546034a0182e6234edc39f370",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -181,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c411fc833364fe78b01306f172a02d6",
+       "model_id": "",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +239,7 @@
     "5. Indicar en qué cortes tomográgicos se ven grapas \n",
     "1. ¿Se encuentran todas las grapas dentro del volumen PTV boost dcho? Comentar la relación entre la posición de las grapas y la del PTV boost.\n",
     "1. Cambiando en el gráfico el `plan_ID` entre `{mama, boost, suma}` para cada uno de los planes describir, de forma aproximada, la extensión de los niveles de dosis de trtamiento explicados en la sección **Fundamentos**\n",
-    "1. Seleccinando como `plan_ID` `SIB` realizar a partir de la figura una primera estimación de las dosis de tratamiento en el PTV mama der y el PTV boost dcho"
+    "1. Seleccinando como `plan_ID` `SIB` realizar a partir de la figura una primera estimación de las dosis de tratamiento en el PTV mama dcha y el PTV boost dcho"
    ]
   },
   {
@@ -245,7 +247,9 @@
    "id": "55180dc4-c06b-4b48-8667-63e6a7a7ceb9",
    "metadata": {},
    "source": [
-    "Como ya hemos indicado en **Fundamentos** visualizar la dosis permite valorar su distribución espacial pero no es un método directo para realizar evaluaciones cuantitativas. \n",
+    "## Histogramas dosis volumen\n",
+    "\n",
+    "Como ya hemos indicado en **Fundamentos** visualizar la dosis permite valorar su distribución espacial pero no es un método sencillo de realizar evaluaciones cuantitativas. \n",
     "\n",
     "En las celdas siguientes mostraremos gráficas de *DVH*, histograma dosis volumen, para ayudar a comprender en qué consisten estos objetos.\n",
     "\n",
@@ -267,7 +271,7 @@
    "id": "d840850b-60f9-4def-b5b7-e50f7141f6b9",
    "metadata": {},
    "source": [
-    "`scikit-rt` tiene herramientas para obtener y representar *DVH*s a partir de una distribución de dosis y un conjunto de estructuras. La siguiente celda muestra un ejemplo de cómo hacerlo para el plan `suma`"
+    "`scikit-rt` proporciona herramientas para obtener y representar *DVH*s a partir de una distribución de dosis y un conjunto de estructuras. La siguiente celda muestra un ejemplo de cómo hacerlo para el plan `suma`"
    ]
   },
   {
@@ -418,10 +422,10 @@
    "source": [
     "Dado que un *DVH* es una curva que relaciona dosis con volumen, los objetivos de prescripción y las restricciones de dosis que se imponen sobre los *DVH* pueden venir expresadas de dos maneras diferentes:\n",
     "\n",
-    "- **Dxx** nos dice la dosis que recibe un volumen **xx**. Si **xx** se expresa sin unidades se refeiere a un porcentaje de volumen respecto al volumen total del órgano. Si se da con unidades se refiere lógicamente a volumen medido en esas unidades. Las propias dosis se pueden en valor absoluto medido en las unidades de dosis correspondiente o a valores relativos respecto a la dosis de prescripción del tratamiento.\n",
+    "- **Dxx** nos dice la dosis que recibe un volumen **xx**. Si **xx** se expresa sin unidades se refeiere a un porcentaje de volumen respecto al volumen total del órgano. Si se da con unidades se refiere lógicamente a volumen medido en esas unidades. Las propias dosis se pueden dar en valor absoluto medido en las unidades de dosis correspondiente o en valores relativos respecto a la dosis de prescripción del tratamiento.\n",
     "- **Vxx** nos dice el volumen de órgano que recibe la dosis **xx**. En este caso lo más habitual es que si no aparecen unidades se refiera a un valor de dosis en Gy. Por ejemplo un V20 inferior al 25% indicaría que se intenta conseguir que la dosis de 25 Gy sea recibida por menos del 25% del volumen del órgano afectado.\n",
     "\n",
-    "Las siguientes celdas muestran ejemplos de cómo interrogar a los objetos `dvh` sobre estos parámetros"
+    "Las siguientes celdas muestran ejemplos de cómo *interrogar* a los objetos `dvh` sobre estos parámetros"
    ]
   },
   {
@@ -488,9 +492,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8da32cfd-d9ed-466f-9eaf-cbe6f6127cc3",
+   "metadata": {},
+   "source": [
+    "### Cuestiones\n",
+    "\n",
+    "9. Realizar una evaluación de los sigueientes criterios de prescripcioón de tratamiento y de tolerabilidad del tratamiento sobre el plan correspondiente\n",
+    "\n",
+    "\n",
+    "| Plan | Volumen | Criterio |\n",
+    "|----|-----|------|\n",
+    "|Mama | PTV mama dcha | Al menos 95% cubierto por el 95% de la dosis de prescripción (50 Gy) |\n",
+    "| | PTV mama dcha | No más del 5% cubierto por el 107% de la dosis de prescripción (50 Gy) |\n",
+    "| | PTV boost dcho | Al menos 95% cubierto por el 95% de la dosis de prescripción (50 Gy) |\n",
+    "| | PTV boost dcho | No más del 5% cubierto por el 107% de la dosis de prescripción (50 Gy) |\n",
+    "| | Pulmón | Volumen de órgano que recibe 20 Gy o más inferior al 25% |\n",
+    "|Boost | PTV boost dcho | Al menos 95% cubierto por el 95% de la dosis de prescripción (10 Gy) |\n",
+    "| | PTV boost dcho | No más del 5% cubierto por el 107% de la dosis de prescripción (10 Gy) |\n",
+    "|Suma | PTV boost dcho | Al menos 95% cubierto por el 95% de la dosis de prescripción (60 Gy) |\n",
+    "| | PTV boost dcho | No más del 5% cubierto por el 107% de la dosis de prescripción (60 Gy) |\n",
+    "| | Pulmón | Volumen de órgano que recibe 20 Gy o más inferior al 25% |\n",
+    "|Mama | PTV mama dcha | Al menos 95% cubierto por el 95% de la dosis de prescripción (40 Gy) |\n",
+    "| | PTV mama dcha | No más del 5% cubierto por el 107% de la dosis de prescripción (40 Gy) |\n",
+    "| | PTV boost dcho | Al menos 95% cubierto por el 95% de la dosis de prescripción (48 Gy) |\n",
+    "| | PTV boost dcho | No más del 5% cubierto por el 107% de la dosis de prescripción (48 Gy) |\n",
+    "| | Pulmón | Volumen de órgano que recibe 20 Gy o más inferior al 25% |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4af15df0-7738-411e-91c3-9f1586f44aed",
+   "metadata": {},
+   "source": [
+    "# Radiobiología\n",
+    "## Fraccionamiento y equivalencia de tratamientos\n",
+    "\n",
+    "Segun el modelo $\\alpha/\\beta$ una dosis absorbida $D$ administrada en un número de fracciones $n$ produce una dosis biológica equivalente $DBE$ dada por\n",
+    "\\begin{equation}\n",
+    "DBE = \\frac{D}{n}\\,(1 + \\frac{D}{\\alpha/\\beta}) \n",
+    "\\end{equation}\n",
+    "\n",
+    "donde el cociente $\\alpha/\\beta$ [Gy] es un parámetro específico del tejido que recibe la dosis.\n",
+    "\n",
+    "Dos esquemas de tratamiento son equivalentes si producen la misma $DBE$.\n",
+    "\n",
+    "### Cuestiones\n",
+    "\n",
+    "10. Calcular que dosis se tiene que administrar al volumen PTV boost dcho si se quiere realizar el tratamiento en lugar de forma secuancial, 25+5 fracciones, en forma concurrente en 25 fracciones.\n",
+    "\n",
+    "1. Calcular la nueva restricción sobre el pulmón\n",
+    "\n",
+    "Considerar un $\\alpha/\\beta = 3$  para todos los tejidos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a10345d1-1b5f-40b1-9d16-87e284733ef6",
+   "id": "1eb38172-f8cd-4518-bced-568f72e5fb3a",
    "metadata": {},
    "outputs": [],
    "source": []
