--- a/notebooks/RadiobiologiaRTMama.ipynb
+++ b/notebooks/RadiobiologiaRTMama.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "## Fundamentos\n",
     "\n",
-    "Los conceptos básicos sobre los que se trabajará en este cuaderno corresponden a un tratamiento de mama, una de las patalogías que con más frecuenca se trata en los Servicios de Radioterapia, pero son aplicables en general a cualquier otra patología. \n",
+    "Los conceptos básicos sobre los que se trabajará en este cuaderno corresponden a un tratamiento de mama, una de las patologías que con más frecuencia se trata en los Servicios de Radioterapia, pero son aplicables en general a cualquier otra patología. \n",
     "\n",
     "En el tratamiento del cáncer de mama la radioterapia se emplea como tratamiento adyuvante a la cirugía. El tumor primario se extirpa y posteriormente se administra una dosis de radiación sobre el lecho tumoral y sobre el resto de la mama.\n",
     "\n",
@@ -239,7 +239,7 @@
     "5. Indicar en qué cortes tomográgicos se ven grapas \n",
     "1. ¿Se encuentran todas las grapas dentro del volumen PTV boost dcho? Comentar la relación entre la posición de las grapas y la del PTV boost.\n",
     "1. Cambiando en el gráfico el `plan_ID` entre `{mama, boost, suma}` para cada uno de los planes describir, de forma aproximada, la extensión de los niveles de dosis de tratamiento explicados en la sección **Fundamentos** e indicar si se cubren los volúmenes de tratamiento.\n",
-    "1. Seleccinando como `plan_ID` `SIB` realizar a partir de la figura una primera estimación de las dosis de tratamiento en el PTV mama dcha y el PTV boost dcho"
+    "1. Seleccionando como `plan_ID` `SIB` realizar a partir de la figura una primera estimación de las dosis de tratamiento en el PTV mama dcha y el PTV boost dcho"
    ]
   },
   {
@@ -593,7 +593,7 @@
    "source": [
     "En python una buena forma de manejar datos en formato Excel es mediante el módulo `pandas`.\n",
     "\n",
-    "Este módulo lee la hoja indicada por `sheet_name` y almance los datos en un objeto de tipo `DataFrame` que dispone de muchos métodos para manipular y viualizar sus datos.\n",
+    "Este módulo lee la hoja indicada por `sheet_name` y almacena los datos en un objeto de tipo `DataFrame` que dispone de muchos métodos para manipular y visualizar sus datos.\n",
     "\n",
     "Para hacer gráficos el módulo de referencia es `matplotlib.pyplot`\n",
     "\n",
