--- a/notebooks/RadiobiologiaRTMama.ipynb
+++ b/notebooks/RadiobiologiaRTMama.ipynb
@@ -9,7 +9,7 @@
     "# Visualización de tratamientos de radioterapia\n",
     "## Distribuciones de dosis absorbida\n",
     "-----\n",
-    "*Este cuadereno modifica el código de los cuadernos de ejemplo del módulo [scikit-rt](https://scikit-rt.github.io/scikit-rt/examples.html)*\n",
+    "*Este cuaderno modifica el código de los cuadernos de ejemplo del módulo [scikit-rt](https://scikit-rt.github.io/scikit-rt/examples.html)*\n",
     "\n",
     "Los datos corresponden a una paciente real tratada en el Hospital de Fuenlabrada.\n",
     "\n",
@@ -31,7 +31,7 @@
     "\n",
     "Los efectos adversos del tratamiento se cuantifican fundamentalmente por la dosis que reciba el pulmón ipsilateral, siendo un buen indicador predictivo el porcentaje de volumen que recibe una dosis de 20 Gy o superior en relación al volumen total de ese pulmón. Se considera tolerable un tratamiento en el que el volumen de pulmón que recibe 20 Gy es inferior al 25\\% del volumen total. Otro efecto adverso es la aparición de radiodermitis por respuesta aguda de la piel a la radiación. Este efecto es controlado directamente por el oncólogo de radioterapia mediante revisiones en consulta durante el curso del tratamiento. En casos graves puede complicar el desarrollo del tratamiento obligando a parar y descansar durante un tiempo.\n",
     "\n",
-    "La manera convencional de aplicar el tratamiento es hacerlo de manera secuencial. Durante 25 fracciones se irradia la mama completa para generar una distribución de dosis todo lo uniforme posible procurando evitar el pulmón. El valor medio de esa distribución de dosis será de 50 Gy y la dispersión de la dosis debe ser tal que no más de un 5\\% de la mama reciba más de 53.5 Gy ni más de un 5\\% de la mama reciba menos de un 47.5 Gy, o dicho en términos relativos, el 95\\% del volumen de la mama recibe al menos el 95\\% de la dosis de prescripción y no más del 5\\% del volumen de la mama recibe más del 107\\% de la dosis de prescripción. A continuación se administraran otras cinco fracciones en las se procurará irradiar únicamente el volumen del lecho tumoral hasta que en este volumen se tenga una distribución de dosis con un valor medio de 60 Gy y de nuevo con una dispersión tal que se cumplan los criterios del 5\\% aplicados al 95\\% y al 107\\% de la dosis de prescripción. En el argot de la radioterapia a la irradiación del volumen reducido se la denomina \\textit{Boost} o Sobreimpresión.\n",
+    "La manera convencional de aplicar el tratamiento es hacerlo de manera secuencial. Durante 25 fracciones se irradia la mama completa para generar una distribución de dosis todo lo uniforme posible procurando evitar el pulmón. El valor medio de esa distribución de dosis será de 50 Gy y la dispersión de la dosis debe ser tal que no más de un 5\\% de la mama reciba más de 53.5 Gy ni más de un 5\\% de la mama reciba menos de un 47.5 Gy, o dicho en términos relativos, el 95\\% del volumen de la mama recibe al menos el 95\\% de la dosis de prescripción y no más del 5\\% del volumen de la mama recibe más del 107\\% de la dosis de prescripción. A continuación se administraran otras cinco fracciones en las se procurará irradiar únicamente el volumen del lecho tumoral hasta que en este volumen se tenga una distribución de dosis con un valor medio de 60 Gy y de nuevo con una dispersión tal que se cumplan los criterios del 5\\% aplicados al 95\\% y al 107\\% de la dosis de prescripción. En el argot de la radioterapia a la irradiación del volumen reducido se la denomina *Boost* o Sobreimpresión.\n",
     "\n",
     "Los avances técnicos han permitido realizar el tratamiento de manera concurrente. Los dos volúmenes se irradian en el mismo número de sesiones prescribiendo diferente dosis por sesión en cada uno de ellos. El tratamiento se acorta en el tiempo y la distribución de dosis se optimiza en mayor medida. La tendencia actual es realizar los tratamientos en menos fracciones.\n",
     "\n",
@@ -140,7 +140,7 @@
     "- Para visualizar planos axiales tiene que estar seleccionado `x-y` en `Slice plane selection`\n",
     "- Hacer visible la segmentación de las estructuras anatómicas relevantes. Seleccionar una opción en `ROI plotting` distinta de `none`. Lo habitual en Radioterapia es trabajar en la opción `contour`\n",
     "- Hacer visible la distribución de dosis mediante el control `Dose opacity`\n",
-    "- Seleccionar las estructuras relevantes para lo que vamos a trabahar en este cuaderno: PTV boost dcho, PTV mama dcha, Pulmon Dcho.\n",
+    "- Seleccionar las estructuras relevantes para lo que vamos a trabajar en este cuaderno: PTV boost dcho, PTV mama dcha, Pulmon Dcho.\n",
     "- Hacer `Zoom` y centrar la imagen en las regiones que se irradian directamente mediante los controles `x centre (mm)` e `y centre (mm)`. La figura debería mostrar una imagen similar a esta\n",
     "![image](../images/zoom.png)\n",
     "- Desplazarse en la dirección craneo caudal cambiando el valor del control `z (mm)`. Una vez seleccionado este control los cursores del teclado nos permiten desplazarnos corte a corte del estudio de CT."
@@ -234,7 +234,7 @@
     "1. Indicar si la posición de la cicatriz en la mama coincide con el volumen de PTV boost dcho.\n",
     "1. ¿Qué estructura tiene mayor extensión la cicatriz o el PTV boost dcho? Comentar qué razones pensamos que motivan esta diferencia de extensión\n",
     "\n",
-    "Dentro de la mama se puden apreciar puntos brillantes que claramente no son de origen natural. Son grapas quirúrgicas.\n",
+    "Dentro de la mama se pueden apreciar puntos brillantes que claramente no son de origen natural. Son grapas quirúrgicas.\n",
     "\n",
     "5. Indicar en qué cortes tomográgicos se ven grapas \n",
     "1. ¿Se encuentran todas las grapas dentro del volumen PTV boost dcho? Comentar la relación entre la posición de las grapas y la del PTV boost.\n",
@@ -422,7 +422,7 @@
    "source": [
     "Dado que un *DVH* es una curva que relaciona dosis con volumen, los objetivos de prescripción y las restricciones de dosis que se imponen sobre los *DVH* pueden venir expresadas de dos maneras diferentes:\n",
     "\n",
-    "- **Dxx** nos dice la dosis que recibe un volumen **xx**. Si **xx** se expresa sin unidades se refeiere a un porcentaje de volumen respecto al volumen total del órgano. Si se da con unidades se refiere lógicamente a volumen medido en esas unidades. Las propias dosis se pueden dar en valor absoluto medido en las unidades de dosis correspondiente o en valores relativos respecto a la dosis de prescripción del tratamiento.\n",
+    "- **Dxx** nos dice la dosis que recibe un volumen **xx**. Si **xx** se expresa sin unidades se refiere a un porcentaje de volumen respecto al volumen total del órgano. Si se da con unidades se refiere lógicamente a volumen medido en esas unidades. Las propias dosis se pueden dar en valor absoluto medido en las unidades de dosis correspondiente o en valores relativos respecto a la dosis de prescripción del tratamiento.\n",
     "- **Vxx** nos dice el volumen de órgano que recibe la dosis **xx**. En este caso lo más habitual es que si no aparecen unidades se refiera a un valor de dosis en Gy. Por ejemplo un V20 inferior al 25% indicaría que se intenta conseguir que la dosis de 25 Gy sea recibida por menos del 25% del volumen del órgano afectado.\n",
     "\n",
     "Las siguientes celdas muestran ejemplos de cómo *interrogar* a los objetos `dvh` sobre estos parámetros"
@@ -498,7 +498,7 @@
    "source": [
     "### Cuestiones\n",
     "\n",
-    "9. Realizar una evaluación de los sigueientes criterios de prescripcioón de tratamiento y de tolerabilidad del tratamiento sobre el plan correspondiente\n",
+    "9. Realizar una evaluación de los siguientes criterios de prescripcioón de tratamiento y de tolerabilidad del tratamiento sobre el plan correspondiente\n",
     "\n",
     "\n",
     "| Plan | Volumen | Criterio |\n",
@@ -528,9 +528,9 @@
     "# Radiobiología\n",
     "## Fraccionamiento y equivalencia de tratamientos\n",
     "\n",
-    "En esta parte del cuaderno queremos utilizar el modelo lineal cuadrático para justificar los valores de prescripción y de restrincción sobre el pulmón que hemos utilizado en el apartado anterior.\n",
+    "En esta parte del cuaderno queremos utilizar el modelo lineal cuadrático para justificar los valores de prescripción y de restricción sobre el pulmón que hemos utilizado en el apartado anterior.\n",
     "\n",
-    "Segun el modelo lineal cuadrático una dosis absorbida $D$ administrada en un número de fracciones $n$ produce una dosis biológica equivalente $DBE$ dada por\n",
+    "Según el modelo lineal cuadrático una dosis absorbida $D$ administrada en un número de fracciones $n$ produce una dosis biológica equivalente $DBE$ dada por\n",
     "\\begin{equation}\n",
     "DBE = D\\,(1 + \\frac{D/n}{\\alpha/\\beta}) \n",
     "\\end{equation}\n",
@@ -687,10 +687,10 @@
     "\n",
     "### Cuestiones\n",
     "\n",
-    "Añadir a cada DataFrame una columna con la **DBE** dosis biológica equivalente correspondiente a la dosis $D$. Represenetar gráficamentelos los histogramas en  una figura en función de la **DBE**\n",
+    "Añadir a cada DataFrame una columna con la **DBE** dosis biológica equivalente correspondiente a la dosis $D$. Representar gráficamente los histogramas en  una figura en función de la **DBE**\n",
     "\n",
     "13. Analizar la equivalencia de los tratamientos expresados en **DBE**\n",
-    "1. Definiendo conformación de la dosis como el grado de solapamiento espacial entre la distribución de la dosis y los volúmenes de tratamiento, ¿qué esquema de tratamiento produce una mejor conformación? Razonar la respeusta comentando las diferencias en los DVHs de los tres volúmenes. \n",
+    "1. Definiendo conformación de la dosis como el grado de solapamiento espacial entre la distribución de la dosis y los volúmenes de tratamiento, ¿qué esquema de tratamiento produce una mejor conformación? Razonar la respuesta comentando las diferencias en los DVHs de los tres volúmenes. \n",
     "1. Repetir la cuestión anterior pero en términos de la **DBEQ2**\n",
     "1. Hacer una representación de los DVHs para el tratamiento secuencial en términos de la dosis $D$ y de **DBEQ2** y explicar porque no coinciden a pesar de que el concepto **DBEQ2** se introdujo para que los Oncólogos de Radioterapia pudieran comparar tratamientos realizados en fraccionamiento estándar de 2 Gy, que es cómo se ha realizado el tratamiento Suma."
    ]
@@ -714,9 +714,17 @@
     "\n",
     "Cuestiones voluntarias, desarrollos interesantes que requieren tener conocimientos básicos de python\n",
     "\n",
-    "1. Desarollar un gráfico que permita visualizar la distribución de dosis de forma interactiva y en en el se pueda seleccionear el intervalo de dosis $(D_{min}, D_{max})$, es decir, un gráfico en el se se visualizan por ejemplo las dosis comprendidas entre el 95% y el 107% de la dosis de prescripción.\n",
+    "1. Desarrollar un gráfico que permita visualizar la distribución de dosis de forma interactiva y en en el se pueda seleccionar el intervalo de dosis $(D_{min}, D_{max})$, es decir, un gráfico en el se se visualizan por ejemplo las dosis comprendidas entre el 95% y el 107% de la dosis de prescripción.\n",
     "1. Desarrollar un gráfico en el que se represente la dosis biológica equivalente de los distintos esquemas de tratamiento. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f76ebe09-d366-423d-b9b4-b7103bc5653f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -735,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
